# font_tables_lib

./: .gitignore  commonly_used_character.py  download.py  lib.py  main.py  paddle_ocr_extractor.py  pyproject.toml  quick.py  requirements.txt  slow.py  tools.py
true_font/: Founder-Lanting.json  Founder-Lanting.npz  Microsoft-Yahei.json  Microsoft-Yahei.npz  README.md  SourceHanSansSC-Normal.json  SourceHanSansSC-Normal.npz  SourceHanSansSC-Regular.json  SourceHanSansSC-Regular.npz
