[project]
name = "font-tables-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.1.0",
    "fonttools>=4.58.5",
    "numpy>=2.3.1",
    "paddleocr>=3.1.0",
    "paddlepaddle>=3.1.0",
    "paddlex>=3.1.1",
    "pillow>=11.3.0",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]
